crates/rome_formatter/tests/specs/prettier/cursor/range-6.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: range-6.js

---
# Input
```js
const myVar = <<<PRETTIER_RANGE_START>>>aFunction;<|><<<PRETTIER_RANGE_END>>>

```

# Output
```js
const myVar = <<<PRETTIER_RANGE_START>>>aFunction;
<|><<<PRETTIER_RANGE_END>>>

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-6.js:1:17
  │
1 │ const myVar = <<<PRETTIER_RANGE_START>>>aFunction;<|><<<PRETTIER_RANGE_END>>>
  │                 ^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-6.js:1:51
  │
1 │ const myVar = <<<PRETTIER_RANGE_START>>>aFunction;<|><<<PRETTIER_RANGE_END>>>
  │                                                   ^^^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-6.js:1:56
  │
1 │ const myVar = <<<PRETTIER_RANGE_START>>>aFunction;<|><<<PRETTIER_RANGE_END>>>
  │                                                        ^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ''
  ┌─ range-6.js:2:1
  │
2 │ 
  │ ^ Expected an expression here


```


